# parallel-matrix-benchmark

./: .gitignore  References.md  Setup.md  notes
matrix-benchmark-cluster/: CMakeLists.txt  main.c
matrix-benchmark-gpu/: .clang-format  CMakeLists.txt  main.cu
matrix-benchmark-single-machine/: CMakeLists.txt  main.c
